--- a/css/styles.css
+++ b/css/styles.css
@@ -117,17 +117,15 @@ body {
 
 .contacts-info {
     display: flex;
-    align-items: center;
     margin-left: auto;
+    
 }
 
 .contacts {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
-    color: var(--slate-color);
-    margin-right: 40px;
-    
+    color: var(--slate-color);   
 }
 
 
@@ -141,6 +139,8 @@ body {
 
 .hero-section {
     background-color: var(--secondary-color);
+    padding-top: 188px;
+    padding-bottom: 188px;
     text-align: center;
 }
 .hero {
@@ -150,7 +150,6 @@ body {
     line-height: 1.07;
     letter-spacing: 0.02em;
     color: var(--white-color); 
-    padding-top: 188px;
     margin-right: auto;
     margin-left: auto;
     
@@ -159,8 +158,8 @@ body {
 }
 .buttons-list {
     display: flex;
-    flex-direction: row;
     justify-content: center;
+    margin-bottom: 72px;
 }
 
 .main-modal-btn {
@@ -174,9 +173,8 @@ body {
     border-radius: 4px;
     border-color: transparent;
     padding: 16px 32px;
-    align-items: flex-start;
     margin-top: 48px;
-    margin-bottom: 188px;
+    
 }
 .main-modal-btn:hover,
 .main-modal-btn:focus {
@@ -191,14 +189,10 @@ body {
     letter-spacing: 0.04em;
     color: var(--accent-color);
     background-color: var(--cloud-color);
-    justify-content: center;
-    align-items: center;
     padding: 12px 24px;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     margin-right: 24px;
-    margin-top: 120px;
-    margin-bottom: 72px;
    
 }
 
@@ -211,19 +205,17 @@ body {
 /*----------ADVANTAGES----------*/
 
 .advantage-section {
-    display: flex;
     padding-top: 120px;
     padding-bottom: 120px;
     
 }
 .advantages {
     display: flex;
-    flex-wrap: wrap;
     gap: 24px;
-    flex-basis: calc(100% - 72px / 4);
+    
 }
 .advantages-item {
-    width: 264px;
+    flex-basis: calc(100% - 72px / 4);
 }
 
 .item {
@@ -233,7 +225,7 @@ body {
     letter-spacing: 0.02em;
     color: var(--secondary-color);
     margin-bottom: 8px;
-    padding-top: 120px;
+    
 }
 .description-item {
     font-size: 16px;
@@ -245,14 +237,12 @@ body {
 
 /*----------ABOUT----------*/
 .about-section {
-    padding-top: 120px;
     padding-bottom: 120px;
 }
 
 .images-list {
     display: flex;
     gap: 24px;
-    flex-basis: calc(100% - 48px / 3);
     
 }
 .about,
@@ -275,14 +265,18 @@ body {
     padding-bottom: 120px;
 }
 .team-list {
+    background-color: var(--white-color);
+    text-align: center;
 }
 .employees-list {
     display: flex;
     gap: 24px;
-    flex-basis: calc(100% - 72px / 4);
 }
 
-
+.borders {
+    padding-top: 32px;
+    padding-bottom: 32px;
+}
 
 .initials {
     font-weight: 500;
@@ -308,12 +302,19 @@ body {
     padding-bottom: 100px;
 }
 
+.f-logotype {
+    color: var(--accent-color);
+    margin-bottom: 16px;
+    
+}
+
 .web-footer {
     font-family: var(--secondary-font);
     font-weight: 800;
     font-size: 18px;
     line-height: 1.17;
     color: var(--accent-color);
+    
 }
 .studio-footer {
     font-family: var(--secondary-font);
@@ -329,24 +330,27 @@ body {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--cornflower-color);
+    width: 264px;
 }
 
 /*----------PORTFOLIO----------*/
 /*----------MENU----------*/
 
 .portfolio-menu {
+    padding-top: 96px;
     padding-bottom: 120px;
 }
 .pictures {
     display: flex;
     flex-wrap: wrap;  
-    flex-basis: calc(100% - 48px / 3);
 }
 
 .border {
     padding-top: 32px;
     padding-bottom: 32px;
+    padding-left: 16px;
     border: 1px solid #E7E9FC;
+    border-top: none;
 }
 
 .row-items:not(:nth-child(3n)) {
@@ -364,12 +368,12 @@ body {
     letter-spacing: 0.02em;
     color: var(--secondary-color);
     margin-bottom: 8px;
-    margin-left: 16px;
+    
 }
 .description {
     font-size: 16px;
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--slate-color);
-    margin-left: 16px;
+    
 }
