--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ body {
 .page-header {
     padding-top: 24px;
     padding-bottom: 24px;
+    border-bottom: 1px solid #E7E9FC;
 }
 
 .page-navigation {
@@ -69,10 +70,6 @@ body {
     align-items: center;
 }
 
-.header-border {
-    border-bottom: 1px solid #E7E9FC;
-    padding-bottom: 24px;
-}
 
 .logotype {
     color: var(--accent-color);
@@ -181,6 +178,7 @@ body {
     background-color: var(--ocean-color);
 }
 
+
 .modal-btn {
     font-family: inherit;
     font-weight: 500;
@@ -193,7 +191,10 @@ body {
     border: 1px solid #E7E9FC;
     border-radius: 4px;
     margin-right: 24px;
-   
+}
+
+.last-btn {
+    margin-right: 0px;
 }
 
 .modal-btn:hover,
